--- a/style.css
+++ b/style.css
@@ -6732,7 +6732,7 @@ aside#colophon .fa-youtube {
     grid-gap: 40px; 
 }
 .archivedStatus{
-	border:5px solid #C5C5C5;
+	border:5px solid #8f8f8f;
 }
 .liveStatus{
 	border:5px solid #10A170;
