--- a/style.css
+++ b/style.css
@@ -6775,11 +6775,11 @@ h3.odhFirstTitle{
     margin-bottom: 20px;
 	text-align: center;
 }
-#odhBoxTitle{
+.odhBoxTitle{
     color: #141414;
     font-size: 19px;
 }
-#odhBoxDescription{
+.odhBoxDescription{
 	color: #141414;
 	display: block;
     display: -webkit-box;
