--- a/style.css
+++ b/style.css
@@ -6874,7 +6874,7 @@ h2.projectMainContODH{
 
 /* style for links */
 
-a:-webkit-any-link {
+.menu-odhmain-container a {
 	text-decoration: none;
 }
 
