changed single in the directory.css to single-persons and added single-projects to style.css

--- a/resources/css/directory.css
+++ b/resources/css/directory.css
@@ -330,7 +330,7 @@ ul.directory-list.filterable {
 	border-radius: 0.75em;
 }
 
-.single #content {
+.single-person #content {
     margin-top: 10rem;
 }
 
