--- a/style.css
+++ b/style.css
@@ -6824,13 +6824,10 @@ h3.odhFirstTitle{
 /*********/
 /*styles for the custom projects page*/
 /*********/
-.single-projects #content {
-    margin-top: 4rem;
-}
 .projectMainContODH{
 	position: relative;
 	width: 100%;
-	height: 700px;
+	height: 350px;
 }
 h2.projectMainContODH{
 	text-align: center;
@@ -6878,22 +6875,33 @@ h2.projectMainContODH{
 .gridContWrapperCont{
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	gap: 10px;
+	gap: 20px;
 	grid-auto-rows: minmax(100px, auto);
+	border: solid 2px blue;
+	position: relative;
 }
 .gridDescriptionProjODH{
 	grid-column: 1;
-	grid-row: 1/2;
+	grid-row: 1/3;
+	position: relative;
+	background-color: #C5C5C5;
+	padding: 10px;
+}
+p.gridDescriptionProjODH{
+	text-align: center;
 }
 .gridProjStatODH{
 	grid-column: 2;
 	grid-row: 1/2;
+	position: relative;
+	padding-left: 30px;
 }
 .gridSnapshotsODH{
-	grid-column: 2/3;
-	grid-row: 3;
+	grid-column: 1/3;
+	grid-row: 3; 
+	position: relative;
+	border: solid 2px blue;
 }
-
 /*END of Project Styles*/
 /* END OF SUBMENUS */
 
