--- a/style.css
+++ b/style.css
@@ -6834,42 +6834,27 @@ h2.projectMainContODH{
 }
 .projectHeroODH{
 	position: relative;
-	background-color: #e6e6e6;
 	width: 100%;
-	border: solid 2px red;
+	height: 300px;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 .projectHeroIMG{
 	position: relative;
-	width: 400px;
-	padding: 10px;
-}
-.projectMidContODH{
-	position: relative;
-	padding-top: 40px;
-	padding-bottom: 100px;
-	border: solid 2px red;
-}
-.projectDescriptionCont{
-	position: absolute;
-	width: 500px;
-}
-.projectDetailsCont{
-	position: absolute;
-	left: 60%;
+	flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
 }
 .projectPersonnel{
 	position: relative;
 }
-.projectSnapshotsODH{
-	position: relative;
-}
-.projectSnapshotsODH{
-	position: relative;
-	padding: 20px;
-	border: solid 2px red;
-}
 .statusLineSizeODH{
 	border-width: 3px;
+}
+.listDetailsStyle{
+	list-style-type:none
 }
 /***grid content***/
 .gridContWrapperCont{
@@ -6877,30 +6862,41 @@ h2.projectMainContODH{
 	grid-template-columns: repeat(2, 1fr);
 	gap: 20px;
 	grid-auto-rows: minmax(100px, auto);
-	border: solid 2px blue;
 	position: relative;
+	padding-top: 20px;
 }
 .gridDescriptionProjODH{
 	grid-column: 1;
-	grid-row: 1/3;
+	grid-row: 1/5;
 	position: relative;
-	background-color: #C5C5C5;
-	padding: 10px;
+	background-color: #e6e6e6;
+	padding: 40px;
+	left: 15%;
 }
-p.gridDescriptionProjODH{
+.gridDescriptionTitle{
 	text-align: center;
 }
 .gridProjStatODH{
 	grid-column: 2;
-	grid-row: 1/2;
+	grid-row: 1/5;
 	position: relative;
-	padding-left: 30px;
+	padding-left: 18%;
+}
+.projectODHStyle{
+	font-weight:bolder;
+	font-size: larger;
+}
+.listStyleODH{
+	padding: 5px;
 }
 .gridSnapshotsODH{
 	grid-column: 1/3;
-	grid-row: 3; 
+	grid-row: 5; 
 	position: relative;
-	border: solid 2px blue;
+	padding-top: 50px;
+}
+.gallery figure img {
+	border-radius: 0px;
 }
 /*END of Project Styles*/
 /* END OF SUBMENUS */
