--- a/style.css
+++ b/style.css
@@ -1583,7 +1583,7 @@ h1.entry-title {
 }
 
 .entry-title.singular-title {
-	padding-top: .5em;
+	margin-top: 4rem;
 }
 
 .entry-title a {
@@ -6709,7 +6709,7 @@ aside#colophon .fa-youtube {
     display: grid;
     grid-template-columns: 1fr repeat(12, minmax(auto, 60px)) 1fr;
     grid-gap: 40px;
-    padding: 60px 0;
+    padding: 1vh 0;
 }
 .odhBoxCards{
     /*column and row width/height to be set here*/
@@ -6820,7 +6820,6 @@ h3.odhFirstTitle{
 /*********/
 /*End of grid styles*/
 /********/
-
 /*********/
 /*styles for the custom projects page*/
 /*********/
@@ -6897,19 +6896,23 @@ h2.projectMainContODH{
 .gallery figure img {
 	border-radius: 0px;
 }
-
+.entry-title.singular-title.single-projects{
+	margin-top: 15vh;
+}
+@media only screen  and (max-width: 360px){
+	.entry-title.singular-title {
+		margin-top: 0rem;
+	}
+}
 /*END of Project Styles*/
 /* END OF SUBMENUS */
-
 /*Here to set the default image for profiles*/
 .defaultIMG{
 	background-image: url("resources/images/default_logo-hum.png");
   background-repeat:no-repeat;
 	background-size: 100% 100%;
 }
-
 /* style for links */
-
 .menu-odhmain-container a {
 	text-decoration: none;
 }
