Cleaned up mobile menu (search bar, underlines, etc.)

--- a/style.css
+++ b/style.css
@@ -1113,66 +1113,6 @@ nav#mobile-menu ul li {
   	line-height: 1;
 }
 
-.dropdown-toggle {
-	display: inline-block;
-	position: relative;
-	float: right;
-	margin-right: -1em;
-	border: 0;
-	padding: .5em 1em;
-	cursor: pointer;
-	font-size: 1em;
-	color: inherit;
-	background: transparent;
-	-webkit-transform: rotateX(0);
-	-ms-transform: rotateX(0);
-	transform: rotateX(0);
-	-webkit-transition: .6s all ease-in-out;
-	transition: .6s all ease-in-out;
-}
-
-.dropdown-toggle:hover {
-	background: transparent;
-}
-
-.toggle-on.dropdown-toggle {
-	-webkit-transform: rotateX(-180deg);
-	-ms-transform: rotateX(-180deg);
-	transform: rotateX(-180deg);
-}
-
-a.toggled-on {
-	border-bottom: 3px solid;
-}
-
-.dropdown-toggle::after {
-	font-family: "iconmeta";
-    content: '\f0a3';
-	font-size: 1.3em;
-	line-height: 2;
-}
-
-nav#mobile-menu .sub-menu,
-nav#mobile-menu .children {
-	display: none;
-	opacity: 0;
-	max-height: 0;
-	margin: 0 auto;
-	padding-left: 10px;
-	font-size: .95em;
-	-webkit-transition: .5s max-height ease-in-out, .3s opacity ease-in-out, .3s padding ease;
-	transition: .5s max-height ease-in-out, .3s opacity ease-in-out, .3s padding ease;
-}
-
-nav#mobile-menu .sub-menu.toggled-on,
-nav#mobile-menu .children.toggled-on {
-	display: block;
-	opacity: 1;
-	max-height: 1000px;
-	-webkit-transition: 1s max-height ease-in-out, .3s .3s opacity ease-in-out, .3s .3s padding ease;
-	transition: 1s max-height ease-in-out, .3s .3s opacity ease-in-out, .3s .3s padding ease;
-}
-
 nav#mobile-menu #nav-cancel {
 	position: absolute;
 	top: 0;
@@ -1219,6 +1159,14 @@ nav#mobile-menu #smobile {
 	text-align: center;
 }
 
+#mobile-menu .searchform input[type="search"] {
+	height: 3em;
+}
+
+#mobile-menu .searchform .searchsubmit {
+	right: .5em;
+	height: 3em;
+}
 
 /*--------------------------------------------------------------
 	# FOOTER
@@ -1275,39 +1223,6 @@ nav#mobile-menu #smobile {
 img#wpstats {
 	display: block;
 	margin: 0 auto .5em;
-}
-
-/*--------------------------------------------------------------
-	## FOOTER MENU
---------------------------------------------------------------*/
-.footermenu {
-	display: block;
-	float: left;
-}
-
-
-.footermenu ul li {
-	display: block;
-	float: left;
-	white-space: nowrap;
-	-webkit-transition: all .2s ease-in-out;
-	transition: all .2s ease-in-out;
-}
-
-.footermenu ul li span.sep {
-	margin: 0 .5em;
-	font-weight: bold;
-	visibility: hidden;
-}
-
-.footermenu ul li:last-child span.sep {
-	display: none;
-}
-
-.footermenu ul li a {
-	font-size: .9em;
-	font-weight: bold;
-	text-transform: uppercase;
 }
 
 /*--------------------------------------------------------------
@@ -4754,7 +4669,6 @@ ul.cryout-wposts li:last-child {
 	padding: 0;
 }
 
-/* ## SIDEBAR SEARCH */
 .searchform input[type="search"] {
 	display: block;
 	float: left;
@@ -4762,22 +4676,13 @@ ul.cryout-wposts li:last-child {
 	z-index: 7;
 	height: 3.5em;
 	width: 100%;
-	padding: 0 3.5em 0 1em;
+	padding: 0 2em 0 .5em;
 	font-size: 1em;
 	font-weight: bold;
 	background: transparent;
 	-webkit-transition: .3s all ease-out;
 	transition: .3s all ease-out;
 	padding-bottom: 1em;
-}
-
-.searchform:hover input[type="search"],
-.searchform input[type="search"]:focus {
-	background: transparent;
-}
-
-.sidey .widget_search {
-	padding: 0;
 }
 
 .searchform .searchsubmit {
@@ -4807,7 +4712,6 @@ ul.cryout-wposts li:last-child {
 	transform: scale(.8);
 }
 
-/* ## HEADER SEARCHFORM */
 #access {
 	text-align: center;
 }
@@ -4823,34 +4727,6 @@ ul.cryout-wposts li:last-child {
     height: 2.3rem;
     border-radius: 2rem;
     margin-top: 1rem;
-}
-
-/* ## FOOTER MENU SEARCHFORM */
-li.menu-footer-search {
-	max-width: 10em;
-}
-
-li.menu-footer-search .searchform {
-	border: 0;
-	background: rgba(0,0,0,.1);
-}
-
-li.menu-footer-search .s {
-	border: 0;
-	height: 2em;
-}
-
-li.menu-footer-search .searchform .searchsubmit {
-	height: 2em;
-	width: 2em;
-	-webkit-transform: scale(.8);
-	-ms-transform: scale(.8);
-	transform: scale(.8);
-}
-
-.widget_rss .widget-title img {
-	width: 11px;
-	height: 11px;
 }
 
 /*--------------------------------------------------------------
@@ -4880,10 +4756,6 @@ li.menu-footer-search .searchform .searchsubmit {
 	transition: color .2s ease-out;
 }
 
-.socials a:hover::before {
-
-}
-
 /* ## HEADER SOCIALS */
 #sheader {
 	float: right;
@@ -4910,7 +4782,6 @@ li.menu-footer-search .searchform .searchsubmit {
 	float: right;
 	clear: right;
 }
-
 
 /*--------------------------------------------------------------
 	# MISCELLANEOUS
@@ -6369,10 +6240,6 @@ nav#humanities-menu li {
 
 nav#humanities-menu li:hover {
 	background-color: #fafafa;
-	border-bottom: 3px solid #002E5D
-}
-
-nav#humanities-menu li.current-menu-item {
 	border-bottom: 3px solid #002E5D
 }
 
