--- a/style.css
+++ b/style.css
@@ -6771,19 +6771,15 @@ h3.odhFirstTitle{
 .entry-content .odhBoxInner a:hover {
 	text-decoration: none;
 }
-.odhBoxDescription+p{
+
+.odhBoxDescription + p {
 	color: #141414;
-	display: block;
-    display: -webkit-box;
-    font-size: 14px;
-    line-height: 1.4;
-	height: 100px; /* line-height * font-size * num-lines */
+	display: -webkit-box;
 	overflow: hidden;
-	-webkit-line-clamp: 3; /* num-lines */
-    -webkit-box-orient: vertical;
-	text-overflow: ellipsis;
-	max-width: 100%;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
 }
+
 .odhBoxInfo{
     display: flex;
     align-self: flex-end;
