--- a/style.css
+++ b/style.css
@@ -1492,7 +1492,6 @@ img#wpstats {
 .entry-content,
 .entry-summary {
 	clear: both;
-	padding-top: 1em;
 	padding-bottom: 1em;
 }
 
@@ -6772,18 +6771,18 @@ h3.odhFirstTitle{
 .entry-content .odhBoxInner a:hover {
 	text-decoration: none;
 }
-.odhBoxDescription{
+.odhBoxDescription+p{
 	color: #141414;
 	display: block;
     display: -webkit-box;
     font-size: 14px;
     line-height: 1.4;
-    height: 58.8; /* line-height * font-size * num-lines */
-    -webkit-line-clamp: 3; /* num-lines */
+	height: 100px; /* line-height * font-size * num-lines */
+	overflow: hidden;
+	-webkit-line-clamp: 3; /* num-lines */
     -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 100%;
+	text-overflow: ellipsis;
+	max-width: 100%;
 }
 .odhBoxInfo{
     display: flex;
@@ -6833,12 +6832,14 @@ h2.projectMainContODH{
 }
 .projectHeroODH{
 	position: relative;
-	width: 100%;
+	width: 90%;
 	height: 300px;
+	left: 6%;
 	display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+	box-shadow: 5px 5px 18px #e6e6e6;
 }
 .projectHeroIMG{
 	position: relative;
@@ -6898,6 +6899,24 @@ span.archivedStatus{
 	margin: 3px;
 }
 /*END of Project Styles*/
+/*project legend*/
+.projectLegend{
+	position: relative;	
+}
+.projectLegendStyle{
+	text-align: center;
+}
+.projectLegendStyle span{
+	padding: 2px 3px 2px 3px;
+}
+.alignmentStyleODH{
+	position: relative;
+	left: 50px;
+}
+.alignmentStyle1ODH{
+	position: relative;
+	left: 85px;	
+}
 /* END OF SUBMENUS */
 
 /*Here to set the default image for profiles*/
@@ -6911,7 +6930,7 @@ span.archivedStatus{
 
 .menu-odhmain-container a {
 	text-decoration: none;
-}
+} 
 
 .entry-content a {
 	text-decoration: underline;
