--- a/style.css
+++ b/style.css
@@ -6802,4 +6802,39 @@ h2.projectMainContODH{
 	color:#002E5D;
 }
 
+/* style for individual 'person' pages */
+
+.single-person .text-content {
+    display: grid;
+    grid-gap: 1rem;
+}
+
+.single.single-person .content {
+    max-width: none;
+}
+.single.single-person .image-container {
+    max-width: none;
+}
+
+.single.single-person .image-container img {
+    max-height: 50vh;
+}
+.single.single-person .profile-content .text-content {
+    padding: 1em 2em;
+}
+
+.single.single-person .cryout#content {
+    margin-top: 3em;
+}
+
+@media (min-width: 600px) {
+    .single-person .text-content { 
+        grid-gap: 1em;
+        grid-template-columns: 1fr 3fr;
+    }
+    .single.single-person .cryout#content {
+        margin-top: 10em;
+    }
+}
+
 /* FIN! */
