--- a/style.css
+++ b/style.css
@@ -6881,28 +6881,35 @@ h2.projectMainContODH{
 .listStyleODH{
 	padding: 5px;
 }
+.gridProjStatODH{
+	grid-column: 2;
+	grid-row: 1/4;
+	position: relative;
+	padding-left: 18%;
+}
+.listStyleODH{
+	padding: 5px;
+}
 .gridSnapshotsODH{
 	grid-column: 1/3;
 	grid-row: 4; 
 	position: relative;
 	padding-top: 50px;
+	padding-left: 25%;
 }
-.gallery figure img {
-	border-radius: 0px;
+.object-fit_contain { 
+	object-fit: contain 
 }
-.gallery-icon figure img{ 
-	object-fit: cover;
- }
-.single-projects .gallery-icon img{
-	height: 200px;
-	background-color: #444;
-	/*FFFDFF*/
+.singleSnapshot img { 
+	height: 250px; background-color: #E6E6E6;
 }
-.single-projects .gallery-icon img[class]{
-	width: 100%;
+.singleSnapshot img[class] { 
+  width: 100%;
 }
-.gallery-icon{
-	margin: 0 30px 20px 0;
+.singleSnapshot {
+  float: left;
+  width: 20%;
+  margin: 0 30px 20px 0;
 }
 span.archivedStatus{
 	padding-left: 3px;
