updated line spacing on intake, live, and archive status of projects

--- a/style.css
+++ b/style.css
@@ -6725,6 +6725,7 @@ h2.projectMainContODH{
 }
 .statusLineSizeODH{
 	border-width: 3px;
+	padding: 2px;
 }
 .listDetailsStyle{
 	list-style-type:none
