--- a/style.css
+++ b/style.css
@@ -2160,9 +2160,13 @@ body .main .wp-caption > a {
 #nav-below .nav-next a  {
 	clear: both;
 	font-size: 1.1em;
+	text-decoration: none;
 	color: 	#0D64B5;
 }
-
+#nav-below .nav-previous a:hover,
+#nav-below .nav-next a:hover  {
+	text-decoration: underline;
+}
 
 /* Blog, Archive Pages Previous/Next Posts Pagination */
 #nav-old-below {
@@ -6371,6 +6375,7 @@ aside#colophon a {
 
 aside#colophon a:hover {
 	color: #C5C5C5;
+	text-decoration: underline;
 }
 
 
@@ -6606,6 +6611,9 @@ aside#colophon .fa-youtube {
 .odhBoxSingleCard:hover{
     background-color:rgba(0, 0, 0, .05);
 }
+.odhBoxSingleCard:hover .projects{
+	text-decoration: underline;
+}
 .odhCardImgContainer{ /*styles for cards with images*/
     width: 100%;
     padding-top: 56.25%; /*aspect ratio of 16x9*/
@@ -6643,6 +6651,9 @@ h3.odhFirstTitle{
 }
 .entry-content .odhBoxInner a:hover {
 	text-decoration: none;
+}
+.projectTag:hover{
+	text-decoration: underline;
 }
 .odhBoxDescription+p{
 	color: #141414;
@@ -6882,7 +6893,7 @@ span.archivedStatus{
 } 
 
 .entry-content a {
-	text-decoration: underline;
+	text-decoration: none;
 	color:#0057b8;
 }
 
@@ -6892,7 +6903,7 @@ span.archivedStatus{
 }
 
 .text-content a {
-	text-decoration: underline;
+	text-decoration: none;
 	color:#0057b8;
 }
 
