--- a/style.css
+++ b/style.css
@@ -6868,8 +6868,17 @@ span.archivedStatus{
 }
 /*END of Project Styles*/
 /*home page post styles*/
+section.blog > h1{
+	text-align: center;
+	margin-bottom: 2em;
+}
 .homePagePost{
 	color: black;
+	text-decoration: none;
+}
+a.homePagePost:hover{
+	color: #0062B8;
+	text-decoration: underline;
 }
 .homePostContainer{
 	display: flex;
@@ -6890,15 +6899,16 @@ span.archivedStatus{
 	position: relative;
 	height: 40vh;
 	width: 800px;
+	background-color: #FFF8D3;
 }
-.homePostAuthor{
+.homePostAuthor, .homePostDate{
 	font-weight: 600;
 	color: #8F8F8F;
-	padding: 5px 0px 5px 0;
+	padding: 1em 1em 1em 0;
 }
 .homePostLine{
 	margin-bottom: 45px;
-	background-color: #E6E6E6;
+	background-color: #C5C5C5;
 }
 .object-fit_cover{
 	object-fit: cover;
