--- a/style.css
+++ b/style.css
@@ -6873,6 +6873,25 @@ span.archivedStatus{
 	}
 }
 /*END of Project Styles*/
+
+/*Styling for projects listed on individual person pages*/
+h3.label.projects ~ li a.liveStatus {
+	border-width: 2px;
+	border-color: transparent transparent #10A170 transparent;
+}
+
+h3.label.projects ~ li a.intakeStatus {
+	border-width: 2px;
+	border-color: transparent transparent #FFED74 transparent;
+}
+
+h3.label.projects ~ li a.archivedStatus {
+	border-width: 2px;
+	border-color: transparent transparent #8f8f8f transparent;
+}
+
+/*End styling*/
+
 /*home page post styles*/
 section.blog > h1{
 	text-align: center;
