--- a/style.css
+++ b/style.css
@@ -6737,12 +6737,16 @@ h2.projectMainContODH{
 .projectPersonnel{
 	position: relative;
 }
+a.projectPersonnelSingle{
+	font-weight: 10;
+}
 .projectList{
 	list-style-type:none;
 }
 .odhAlumni .projectAlumni{
 	margin-bottom: 0px;
 	font-size: 14px;
+	font-weight: 0px;
 }
 .statusLineSizeODH{
 	border-width: 3px;
